--- a/app/src/main/res/layout/fragment_my_pending_order.xml
+++ b/app/src/main/res/layout/fragment_my_pending_order.xml
@@ -4,7 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/gray"
     android:orientation="vertical">
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,4 +20,6 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
