--- a/app/src/main/res/layout/fragment_terms_condition.xml
+++ b/app/src/main/res/layout/fragment_terms_condition.xml
@@ -5,12 +5,20 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:fillViewport="true">-->
+
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/webView_id"
+            />
+
 
         <TextView
+            android:visibility="gone"
             android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -18,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"/>
-    </ScrollView>
+
+<!--    </ScrollView>-->
 
 </LinearLayout>
