--- a/app/src/main/res/layout/fragment_terms_condition.xml
+++ b/app/src/main/res/layout/fragment_terms_condition.xml
@@ -10,6 +10,14 @@
 <!--        android:layout_height="match_parent"-->
 <!--        android:fillViewport="true">-->
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginBottom="-8dp"
+            android:layout_marginTop="-8dp"/>
+
         <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
